--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -243,7 +243,7 @@ skill_huoyufeidan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main
 skill_zouhuo: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/04_1_001.mp3'
 skill_lieyanyachongpo: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/10244.mp3'
 skill_yanwu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/04_1_001.mp3'
-skill_badedetouchou: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/04_1_001.mp3'
+skill_badetouchou: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/04_1_001.mp3'
 skill_huoxing: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/04_3_001.mp3'
 skill_huozhong: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/04_3_001.mp3'
 skill_xueruoshuipao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_2_003.mp3'
