--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -260,3 +260,16 @@ skill_junengchongfeng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@
 skill_jushuipao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_2_003.mp3'
 skill_nongsuoshuimo: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_3_001.mp3'
 skill_chunjingzhixin: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_3_001.mp3'
+skill_hongxin: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_002.mp3'
+skill_rouruan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
+skill_xinzhiyinji: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_002.mp3'
+skill_xinlianxin: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_003.mp3'
+skill_jianren: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
+skill_hongxinyu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_003.mp3'
+skill_rourun: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
+skill_quanlichongfeng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
+skill_mantianhongxin: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/10271.mp3'
+skill_xinxinxiangyin: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_003.mp3'
+skill_dahongxin: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_002.mp3'
+skill_xuehongyinji: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_002.mp3'
+skill_xinyuan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
