--- a/data/effect_mark.yaml
+++ b/data/effect_mark.yaml
@@ -893,24 +893,26 @@
   trigger: OnBeforeAddMark
   priority: 0
   apply:
-    [] #TODO
-    # type: setMarkStack
-    # target: addMarkContext
-    # value:
-    #   type: dynamic
-    #   selector:
-    #     base: addMarkContext
-    #     chain:
-    #       - type: select
-    #         arg:
-    #           type: dynamic
-    #           arg: stack
-    #       - type: multiply
-    #         arg: 2
+    type: setStatLevelMarkLevel
+    target: addMarkContext
+    value:
+      type: dynamic
+      selector:
+        base: addMarkContext
+        chain:
+          - type: select
+            arg:
+              type: dynamic
+              arg: baseMark
+          - type: asStatLevelMark
+          - type: selectPath
+            arg: initialLevel
+          - type: multiply
+            arg: 2
   condition:
     type: every
     conditions:
-      - type: selfBeAddMark
+      - type: selfAddMark
       - type: statStageChange
         check: down
 - id: effect_mark_when_attacked_add_foe_mark_zhongdu_50_percent
@@ -1203,3 +1205,41 @@
             - type: multiply
               arg: 30
       percent: 0
+# 血红印记：回合结束时对持有者造成最大体力1/8的伤害
+- id: effect_mark_xuehongyinji_damage_on_turn_end
+  trigger: TurnEnd
+  priority: 0
+  apply:
+    type: dealDamage
+    target: self
+    value:
+      type: dynamic
+      selector:
+        base: self
+        chain:
+          - type: select
+            arg:
+              type: base
+              arg: maxHp
+          - type: divide
+            arg: 8
+  condition:
+    type: checkSelf
+# 反弹印记：反弹受到伤害的25%
+- id: effect_mark_fantan_reflect_damage
+  trigger: OnDamage
+  condition:
+    type: selfBeDamaged
+  priority: 0
+  apply:
+    type: dealDamage
+    target: foe
+    value:
+      type: dynamic
+      selector:
+        base: damageContext
+        chain:
+          - type: selectPath
+            arg: damageResult
+          - type: multiply
+            arg: 0.25
